--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js && npm run dev ../gui/GeoQuizzer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "blåsipporna",
