--- a/gui/GeoQuizzer/package.json
+++ b/gui/GeoQuizzer/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "d3": "^7.8.5",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@types/d3": "^7.4.1",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
