--- a/gui/GeoQuizzer/package.json
+++ b/gui/GeoQuizzer/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
+    "@mdi/js": "^7.3.67",
     "d3": "^7.8.5",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
@@ -24,6 +26,5 @@
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
     "vite": "^4.4.9"
-    
   }
 }
