--- a/gui/GeoQuizzer/package.json
+++ b/gui/GeoQuizzer/package.json
@@ -2,6 +2,7 @@
   "name": "geoquizzer",
   "version": "0.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
