--- a/gui/GeoQuizzer/package.json
+++ b/gui/GeoQuizzer/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.3.67",
     "@mdi/js": "^7.3.67",
     "d3": "^7.8.5",
+    "js-base64": "^3.7.5",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
@@ -28,6 +29,5 @@
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
     "vite": "^4.4.9"
-
   }
 }
