--- a/gui/GeoQuizzer/package.json
+++ b/gui/GeoQuizzer/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@mdi/font": "^7.3.67",
     "@mdi/js": "^7.3.67",
     "d3": "^7.8.5",
