--- a/gui/GeoQuizzer/package.json
+++ b/gui/GeoQuizzer/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@mdi/font": "^7.3.67",
     "@mdi/js": "^7.3.67",
     "d3": "^7.8.5",
