--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.1"
+  },
+  "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "eslint": "^8.52.0"
   }
 }
